# mcp_for_n8n

.qwen/: QWEN.md  context.md  tasks.md
msp-cli/: .gitignore  README.md  invalid_workflow.json  n8n_to_deploy.json  n8n_workflow.json  pyproject.toml  test_workflow.json  to_deploy.json
msp-cli/.github/workflows/: ci.yml
msp-cli/cli/: main.py
msp-cli/cli/commands/: deploy.py  generate.py  parse.py  validate.py
msp-cli/configs/: config.example.yaml  config.yaml
msp-cli/msp_agent/core/: config.py  generator.py  models.py  parser.py  validator.py
msp-cli/msp_agent/templates/: email.j2  example.j2  http_request.j2  unknown.j2
msp-cli/tests/: test_cli.py  test_config.py  test_generator.py  test_parser.py  test_validator.py
